<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/dialogTitle"
            android:text="@string/dialog_title"
    />
    <TextView
            android:id="@+id/dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/dialogBody"
            android:text="@string/inner_thoughts"
            android:layout_below="@id/dialog_title"
    />
    <Button
            android:id="@+id/dialog_positiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_message"
            android:layout_alignParentEnd="true"
            android:text="@string/yes"
    />
    <Button
            android:id="@+id/dialog_negativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_message"
            android:layout_alignParentStart="true"
            android:text="@string/no"
    />

</RelativeLayout>