<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/error_display"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/display_loading"
        android:contentDescription="@string/image_desc"
        android:visibility="visible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/resultsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/smallbold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/header_name"
        />
    <TextView
        android:id="@+id/header_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/smallbold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/header_time"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/smallbold"
        app:layout_constraintEnd_toStartOf="@id/header_time"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/header_rank"
        />
    <View
        android:id="@+id/divider"
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@id/header_time"/>
    <Button
        android:id="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/capsule"
        android:onClick="retryNetworkCall"
        android:visibility="gone"
        android:text="@string/retry"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>