<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:background="@color/splash_background"
>

    <ImageView
            android:id="@+id/iv_ad_logo"
            android:layout_width="196.5dp"
            android:layout_height="168.5dp"
            android:contentDescription="@string/ad_logo"
            android:background="@drawable/ic_icon_crafted"
            android:layout_centerHorizontal="true"
    />
    <TextView
            android:id="@+id/tv_ad_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_ad_logo"
            style="@style/aboutBody"
            android:layout_centerHorizontal="true"
            android:text="@string/ad_version"
    />
    <TextView
            android:id="@+id/tv_ad_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_ad_version"
            android:padding="@dimen/fab_margin"
            style="@style/aboutBody"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:text="@string/ad_about"
    />

</RelativeLayout>