<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/racer_name"
        style="@style/smallbold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:paddingTop="@dimen/fab_margin"
        android:text="@string/header_name"
        app:layout_constraintEnd_toStartOf="@+id/racer_rank"
        app:layout_constraintStart_toEndOf="@id/racer_medal"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/racer_medal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/image_medal"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="fitCenter"/>
    <TextView
        android:id="@+id/racer_age"
        style="@style/addressText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@id/racer_name"
        app:layout_constraintStart_toEndOf="@id/racer_medal"
        android:text="@string/placeholder_age"/>
    <TextView
        android:id="@+id/racer_rank"
        android:layout_width="80dp"
        android:layout_height="0dp"
        style="@style/resultsnumber"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/racer_time"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/placeholder_number"/>
    <TextView
        android:id="@+id/racer_time"
        android:layout_width="80dp"
        android:layout_height="0dp"
        style="@style/resultsnumber"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/placeholder_number"/>

</androidx.constraintlayout.widget.ConstraintLayout>